--- a/src/main/features/claimant-response/views/task-list.njk
+++ b/src/main/features/claimant-response/views/task-list.njk
@@ -8,7 +8,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <div class="task-group">
-        {{ taskListHeading(beforeYouStartSection.position, t(beforeYouStartSection.name)) }}
+        {{ taskListHeading(beforeYouStartSection.name) }}
 
         {% for item in beforeYouStartSection.tasks %}
           {{ task(item.startPageUrl, t(item.name), item.completed) }}
@@ -16,7 +16,7 @@
       </div>
 
       <div class="task-group">
-        {{ taskListHeading(howYouWantToRespondSection.position, t(howYouWantToRespondSection.name)) }}
+        {{ taskListHeading(howYouWantToRespondSection.name) }}
 
         {% for item in howYouWantToRespondSection.tasks %}
           {{ task(item.startPageUrl, t(item.name), item.completed) }}
@@ -25,7 +25,7 @@
 
       {% if submitSection %}
         <div class="task-group">
-          {{ taskListHeading(submitSection.position, t(submitSection.name)) }}
+          {{ taskListHeading(submitSection.name) }}
 
           {% for item in submitSection.tasks %}
             {{ task(item.startPageUrl, t(item.name), item.completed) }}
