--- a/src/main/features/response/views/task-list.njk
+++ b/src/main/features/response/views/task-list.njk
@@ -9,7 +9,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <div class="task-group">
-        {{ taskListHeading(beforeYouStartSection.position, t(beforeYouStartSection.name)) }}
+        {{ taskListHeading(beforeYouStartSection.name) }}
 
         {% for item in beforeYouStartSection.tasks %}
           {{ task(item.startPageUrl, t(item.name), item.completed) }}
@@ -17,7 +17,7 @@
       </div>
 
       <div class="task-group">
-        {{ taskListHeading(respondToClaimSection.position, t(respondToClaimSection.name)) }}
+        {{ taskListHeading(respondToClaimSection.name) }}
 
         {% for item in respondToClaimSection.tasks %}
           {{ task(item.startPageUrl, t(item.name), item.completed) }}
@@ -26,7 +26,7 @@
 
       {% if resolvingClaimSection %}
         <div class="task-group">
-          {{ taskListHeading(resolvingClaimSection.position, t(resolvingClaimSection.name)) }}
+          {{ taskListHeading(resolvingClaimSection.name) }}
 
           {% for item in resolvingClaimSection.tasks %}
             {{ task(item.startPageUrl, t(item.name), item.completed) }}
@@ -36,7 +36,7 @@
 
       {% if submitSection %}
         <div class="task-group">
-          {{ taskListHeading(submitSection.position, t(submitSection.name)) }}
+          {{ taskListHeading(submitSection.name) }}
 
           {% for item in submitSection.tasks %}
             {{ task(item.startPageUrl, t(item.name), item.completed) }}
@@ -65,7 +65,9 @@
           </li>
           <li>
             <strong class="bold">{{ t('Claim details:') }}</strong>
-            <a class="block" href="{{ ResponsePaths.claimDetailsPage.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View claim') }}</a>
+            <a class="block" href="{{ ResponsePaths.claimDetailsPage.evaluateUri({ externalId: claim.externalId }) }}">
+              {{ t('View claim') }}
+            </a>
           </li>
         </ul>
       </div>
