--- a/src/main/features/response/views/partial-admission/how-much-do-you-owe.njk
+++ b/src/main/features/response/views/partial-admission/how-much-do-you-owe.njk
@@ -6,21 +6,23 @@
 {% from "date.njk" import dateInput %}
 
 {% block content %}
-<div class="grid-row">
-  <div class="column-two-thirds">
+  <div class="grid-row">
+    <div class="column-two-thirds">
 
-    <form method="post" novalidate>
+      <form method="post" novalidate>
 
-      {{ csrfProtection(csrf) }}
+        {{ csrfProtection(csrf) }}
 
-      <p>{{ t('The total amount claimed is {{ totalAmount }}. This includes the claim fee and any interest.',
-                { totalAmount: totalAmount | numeral }) }}</p>
+        <p>{{ t('The total amount claimed is {{ totalAmount }}. This includes the claim fee and any interest.',
+          { totalAmount: totalAmount | numeral }) }}</p>
 
-      {{ poundInput(name = 'amount', form = form, bold = true) }}
+        {{ poundInput(name = 'amount', form = form, bold = true) }}
 
-      {{ saveAndContinueButton() }}
-    </form>
+        <input type="hidden" name="totalAmount" value="{{ totalAmount }}">
 
+        {{ saveAndContinueButton() }}
+      </form>
+
+    </div>
   </div>
-</div>
 {% endblock %}
