ROC-3803: Preventing double clicks

--- a/src/main/views/includes/scripts.njk
+++ b/src/main/views/includes/scripts.njk
@@ -7,6 +7,7 @@
 <script src="{{ asset_paths['js'] }}/detectJavascript.js"></script>
 <script src="{{ asset_paths['js'] }}/analytics.js"></script>
 <script src="{{ asset_paths['js'] }}/analytics-custom-event-sender.js?2017-10-11"></script>
+<script src="{{ asset_paths['js'] }}/double-click-preventer.js"></script>
 
 {% if development %}
   <script src="https://localhost:35729/livereload.js"></script>
