--- a/src/main/views/includes/scripts.njk
+++ b/src/main/views/includes/scripts.njk
@@ -1,7 +1,7 @@
 <!-- Javascript -->
 <script src="{{ asset_paths['js_vendor'] }}/jquery.min.js"></script>
 <script src="{{ asset_paths['js_vendor'] }}/govuk/shim-links-with-button-role.js"></script>
-<script src="{{ asset_paths['js_vendor'] }}/govuk/show-hide-content.js"></script>
+<script src="{{ asset_paths['js'] }}/show-hide-content-patched.js"></script>
 
 <script src="{{ asset_paths['js'] }}/application.js"></script>
 <script src="{{ asset_paths['js'] }}/detectJavascript.js"></script>
