--- a/src/main/features/response/views/statement-of-means/monthly-income.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-income.njk
@@ -57,16 +57,18 @@
   {% set checkboxName = name + 'Declared' %}
 
   {% call expandableCheckboxOption(form = form, name = checkboxName, value = 'true', checked = (form.valueFor(checkboxName) or (form.valueFor(name) and form.model.anyOtherIncomePopulated)), label = label, additionalClasses = 'other-section') %}
-    {% for source in form.model.otherSources %}
-      <div class="other-income-expense-source">
-        {{ incomeExpenseSource(form = form, name = name + '[' + loop.index0 + ']', amountLabel = 'Amount received', amountHint = hint, scheduleLabel = 'Received every', nameEditable = true) }}
-        {% if form.model.otherSources.length > 1 %}
-          {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources.' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button') }}
-        {% else %}
-          {{ linkButton(name = 'action[resetIncomeSource][' + name + '.0]', label = 'Reset this income source', class = 'link-button js-hidden') }}
-        {% endif %}
-      </div>
-    {% endfor %}
+    <div>
+      {% for source in form.model.otherSources %}
+        <div class="other-income-expense-source">
+          {{ incomeExpenseSource(form = form, name = name + '[' + loop.index0 + ']', amountLabel = 'Amount received', amountHint = hint, scheduleLabel = 'Received every', nameEditable = true) }}
+          {% if form.model.otherSources.length > 1 %}
+            {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources.' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button') }}
+          {% else %}
+            {{ linkButton(name = 'action[resetIncomeSource][' + name + '.0]', label = 'Reset this income source', class = 'link-button js-hidden') }}
+          {% endif %}
+        </div>
+      {% endfor %}
+    </div>
 
     {{ linkButton(name = 'action[addOtherIncomeSource]', label = 'Add another source of income', class = 'button button-secondary') }}
   {% endcall %}
