--- a/src/main/features/response/views/statement-of-means/monthly-income.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-income.njk
@@ -64,6 +64,7 @@
           {% if form.model.otherSources.length > 1 %}
             {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources.' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button') }}
           {% else %}
+            {{ linkButton(name = 'action[removeOtherIncomeSource][otherSources.' + loop.index0 + ']', label = 'Remove this income source', class = 'link-button hidden') }}
             {{ linkButton(name = 'action[resetIncomeSource][' + name + '.0]', label = 'Reset this income source', class = 'link-button js-hidden') }}
           {% endif %}
         </div>
