--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -90,18 +90,6 @@
       {{ tableStart('responseDetails', 'Response details') }}
       {% if draft.partialAdmission.alreadyPaid.option === YesNoOption.YES %}
 
-        {{ row(
-          label = 'How much money have you paid?',
-          value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral,
-          changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
-          bold = true
-        ) }}
-        {{ row(
-          label = 'When did you pay this amount?',
-          value = draft.partialAdmission.howMuchHaveYouPaid.date.toMoment() | date,
-          changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
-          bold = true
-        ) }}
         {{
           row(
             label = 'How much money have you paid?',
@@ -120,20 +108,6 @@
            )
         }}
 
-        {{ row(
-          label = 'How did you pay the amount claimed?',
-          value = draft.partialAdmission.howMuchHaveYouPaid.text,
-          changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
-          bold = true
-        ) }}
-      {% else %}
-        {{ row(
-          label = 'How much money do you admit you owe?',
-          value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral,
-          changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
-          bold = true
-        ) }}
-      {% endif %}
         {{
            row(
              label = 'How did you pay the amount claimed?',
@@ -141,6 +115,17 @@
              bold = true
            )
         }}
+
+      {% else %}
+        {{
+          row(
+            label = 'How much money do you admit you owe?',
+            value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral,
+            changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
+            bold = true
+          )
+        }}
+      {% endif %}
 
         {{
            row(
@@ -150,13 +135,6 @@
              bold = true
            )
         }}
-
-      {{ row(
-        label = 'Why do you disagree with the claim amount?',
-        value = draft.partialAdmission.whyDoYouDisagree.text,
-        changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
-        bold = true
-      ) }}
 
         {{
           timelineCheckAndSend(
