--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -1,11 +1,11 @@
 {% set claimantName = claim.claimData.claimant.name %}
-{% set amount = claim.response.paymentDetails.amount| numeral %}
-{% set fullAmount = claim.totalAmountTillToday| numeral %}
+{% set amount = claim.response.paymentDetails.amount | numeral %}
+{% set fullAmount = claim.totalAmountTillToday | numeral %}
 
-{% if claim.response['isAlreadyPaid'] === 'yes' %}
-<p>{{ t('If {{ claimantName }} accepts your response the claim will be settled. We’ll email you to tell you.', {claimantName: claimantName}) }}</p>
-<p> {{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
-<p>{{ t('We’ll contact you if we set a hearing date to tell you how to prepare') }}.</p>
+{% if claim.response['isAlreadyPaid'] === YesNoOption.Yes.option %}
+  <p>{{ t('If {{ claimantName }} accepts your response the claim will be settled. We’ll email you to tell you.', {claimantName: claimantName}) }}</p>
+  <p> {{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
+  <p>{{ t('We’ll contact you if we set a hearing date to tell you how to prepare') }}.</p>
 {% endif %}
 
 {% if claim.response.paymentOption %}
