--- a/src/main/features/response/views/macro/statement-of-means/incomeExpenseSource.njk
+++ b/src/main/features/response/views/macro/statement-of-means/incomeExpenseSource.njk
@@ -1,9 +1,9 @@
 {% from "form.njk" import textInput, poundInputInline, radioGroup %}
 
-{% macro incomeExpenseSource(form, name, amountLabel, amountHint, scheduleLabel, nameEditable) %}
+{% macro incomeExpenseSource(form, name, sourceLabel, amountLabel, amountHint, scheduleLabel, nameEditable) %}
   <div class="income-expense-source">
     {% if nameEditable %}
-      {{ textInput(form = form, name = name + '[name]', label = 'Source of income') }}
+      {{ textInput(form = form, name = name + '[name]', label = sourceLabel) }}
     {% endif %}
     {{ amountSource(form, name, label = amountLabel, hint = amountHint) }}
     {{ scheduleSource(form, name, label = scheduleLabel) }}
