--- a/src/main/features/response/views/partial-admission/how-much-do-you-owe.njk
+++ b/src/main/features/response/views/partial-admission/how-much-do-you-owe.njk
@@ -18,7 +18,7 @@
 
         {{ poundInput(name = 'amount', form = form, bold = true) }}
 
-        <input type="hidden" name="totalAmount" value="{{ form.valueFor('totalAmount') }}">
+        <input type="hidden" name="totalAmount" value="{{ totalAmount }}">
 
         {{ saveAndContinueButton() }}
       </form>
