--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -78,10 +78,6 @@
     {% endif %}
     {{ tableEnd() }}
 
-    {% if statementOfMeansIsApplicable and draft.statementOfMeans %}
-      {% include "./statement-of-means/check-and-send.njk" %}
-    {% endif %}
-
     {% if draft.isResponseRejectedFullyWithAmountClaimedPaid() %}
       {{ tableStart('yourResponse', 'Your response') }}
         {{ row(label = 'When did you pay this amount?', value = draft.whenDidYouPay.date.toMoment() | date, changeLink = ResponsePaths.whenDidYouPay.evaluateUri({ externalId: claim.externalId }), bold = true) }}
@@ -134,18 +130,16 @@
           )
         }}
 
-        {% endif %}
+      {% endif %}
 
-      {{
-          row(
-            label = 'Why do you disagree with the amount claimed?',
-            value = draft.partialAdmission.whyDoYouDisagree.text,
-            changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
-            bold = true
-          )
-      }}
-
-      {#TODO Check if they want the boarder at the bottom of Why do you disagree with the amount claimed?'#}
+        {{
+            row(
+              label = 'Why do you disagree with the amount claimed?',
+              value = draft.partialAdmission.whyDoYouDisagree.text,
+              changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
+              bold = true
+            )
+        }}
 
         {{
           timelineCheckAndSend(
@@ -167,6 +161,23 @@
         }}
 
         {{ row(label = 'Comments about their evidence (optional)', value = draft.partialAdmission.evidence.comment | default(''), bold = true) }}
+
+        {% if ( draft.partialAdmission.paymentOption) %}
+          {{ tableStart('whenWillYouPay', 'When will you pay') }}
+          {{ row(label = 'When will you pay', value = t(draft.partialAdmission.paymentOption.option.displayValue) | capitalize, changeLink = PartAdmissionPaths.paymentOptionPage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+
+          {% if draft.partialAdmission.paymentOption.isOfType(DefendantPaymentType.BY_SET_DATE) %}
+            {{ row(label = 'When you’ll pay the amount', value = draft.partialAdmission.paymentDate.date.toMoment() | date, changeLink = PartAdmissionPaths.paymentDatePage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+          {% endif %}
+
+          {% if draft.partialAdmission.paymentOption.isOfType(DefendantPaymentType.INSTALMENTS) %}
+            {{ row(label = 'Regular payments of', value = draft.partialAdmission.paymentPlan.instalmentAmount | numeral, changeLink = PartAdmissionPaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bold = true, bottomBorder = false) }}
+            {{ row(label = 'Frequency of payments', value = t(draft.partialAdmission.paymentPlan.paymentSchedule.displayValue), bold = true, bottomBorder = false) }}
+            {{ row(label = 'Make the first payment on', value = draft.partialAdmission.paymentPlan.firstPaymentDate.toMoment() | date, bold = true) }}
+          {% endif %}
+
+          {{ tableEnd() }}
+        {% endif %}
 
         {{ tableStart('freeMediation', 'Free mediation') }}
         {{
@@ -202,6 +213,10 @@
       }}
       {{ row(label = 'Comments about their evidence (optional)', value = draft.evidence.comment | default(''), bold = true) }}
       {{ tableEnd() }}
+    {% endif %}
+
+    {% if statementOfMeansIsApplicable and draft.statementOfMeans %}
+      {% include "./statement-of-means/check-and-send.njk" %}
     {% endif %}
 
     {% if draft.isResponseRejectedFullyWithDispute() %}
