Restore accidental removal

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -125,6 +125,15 @@
             bold = true
           )
         }}
+
+        {{
+         row(
+            label = 'Why do you disagree with the amount claimed?',
+            value = draft.partialAdmission.whyDoYouDisagree.text,
+             changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
+             bold = true
+           )
+        }}
       {% endif %}
 
         {{
