ROC-2703 Refactor api data model change in partial admission confirmation pages

--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -1,5 +1,5 @@
 {% set claimantName = claim.claimData.claimant.name %}
-{% set amount = claim.response.paymentDetails.amount | numeral %}
+{% set amount = claim.response.amount | numeral %}
 {% set fullAmount = claim.totalAmountTillToday | numeral %}
 
 {% if claim.response['isAlreadyPaid'] === YesNoOption.Yes.option %}
