--- a/src/main/features/response/views/confirmation/part-admission.njk
+++ b/src/main/features/response/views/confirmation/part-admission.njk
@@ -1,20 +1,20 @@
 {% set claimantName = claim.claimData.claimant.name %}
 {% set claimantDetailsPageURI = ClaimPaths.claimantDetailsPage.evaluateUri({ externalId: claim.externalId }) %}
-{% set amount = claim.response.paymentDetails.amount | numeral %}
+{% set amount = claim.response.amount | numeral %}
 
 {% if claim.response['isAlreadyPaid'] === YesNoOption.Yes.option %}
   <p> {{ t('You told us you’ve paid the {{ amount }} you believe you owe. We’ve sent {{ claimantName }} this response.', { claimantName: claimantName, amount: amount }) }}</p>
 {% endif %}
 
-{% if claim.response.paymentOption %}
-  {% if claim.response.paymentDate %}
+{% if claim.response.paymentIntention %}
+  {% if claim.response.paymentIntention.paymentDate %}
     {% set paymentDate = claim.response.paymentDate | date %}
   {% endif %}
-  {% if claim.response.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
     {% set paymentMethod = 'immediately' %}
-  {% elseif claim.response.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     {% set paymentMethod = 'by ' + paymentDate %}
-  {% elseif  claim.response.paymentOption === domain.PaymentOption.INSTALMENTS %}
+  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {% set paymentMethod = 'by instalments' %}
   {% endif %}
 
