--- a/src/main/features/claimant-response/views/settle-admitted.njk
+++ b/src/main/features/claimant-response/views/settle-admitted.njk
@@ -1,8 +1,8 @@
 {% extends "layout.njk" %}
 
-{% from "form.njk" import saveAndContinueButton, csrfProtection, radioGroup, radioGroupWithHintPanel, errorSummary %}
+{% from "form.njk" import saveAndContinueButton, csrfProtection, radioOption, errorSummary %}
 
-{% set heading = 'Do you want to settle the claim for the £1,200 the defendant admitted?' %}
+{% set heading = t('Do you want to settle the claim for the {{ settleAmount }} the defendant admitted?', { settleAmount: claim.response.amount | numeral }) %}
 
 {% block content %}
   <div class="grid-row">
@@ -18,30 +18,29 @@
         {% set error = form.errorFor('admitted') %}
         <div class="form-group {% if error %} form-group-error {% endif %}">
           <fieldset id="admitted[label]">
-            <legend class="visually-hidden">{{ t('Do you want to settle the claim for the £1,200 the defendant admitted?') }}</legend>
+            <legend
+              class="visually-hidden">{{ t('Do you want to settle the claim for the {{ settleAmount }} the defendant admitted?', { settleAmount: claim.response.amount | numeral }) }}</legend>
             {% if error %}<span class="error-message">{{ t(error) }}</span>{% endif %}
 
-            {{
-              radioOption(
-                form = form,
-                name = 'admitted[value]',
-                value = YesNoOption.YES.option,
-                label = t('Yes'),
-                bold = true,
-                hint = 'You can agree to their repayment plan or suggest your own.'
-              )
-            }}
+            {{ radioOption(
+              form = form,
+              name = 'admitted',
+              value = YesNoOption.YES.option,
+              label = t('Yes'),
+              bold = true,
+              hint = 'You can agree to their repayment plan or suggest your own.',
+              checked = (form.valueFor('admitted') === YesNoOption.YES)
+            ) }}
 
-            {{
-              radioOption(
-                form = form,
-                name = 'admitted[value]',
-                value = YesNoOption.NO.option,
-                label = t('No'),
-                bold = true,
-                hint = 'The claim will continue for the total amount you claimed:'
-              )
-            }}
+            {{ radioOption(
+              form = form,
+              name = 'admitted',
+              value = YesNoOption.NO.option,
+              label = t('No'),
+              bold = true,
+              hint = t('The claim will continue for the total amount you claimed: {{ claimAmount }}', { claimAmount: claim.claimData.amount.totalAmount() | numeral }),
+              checked = (form.valueFor('admitted') === YesNoOption.NO)
+            ) }}
 
           </fieldset>
         </div>
